tests/feature_tests/snapshots/e2e__feature_tests__use_on_cd_dot_node_version__Zsh.snap
---
source: tests/feature_tests/mod.rs
expression: "&source.trim()"
---
set -e
eval "$(fnm env --use-on-cd)"
mkdir inner_path
echo v8.11.3 > inner_path/.node-version
fnm install v8.11.3
cd inner_path
if [ "$(node -v)" != "v8.11.3" ]; then
    echo 'Expected Node version to be "v8.11.3", Got: '"$(node -v)"
    exit 1
fi
